added new Test class UserServiceTest